sumo/tests/sumo/extended/simulation_routing/assignment/errors/disconnect_ignore/vehroutes.sumo
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 09/24/15 09:49:56 by SUMO Version dev-SVN-r18913
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <additional-files value="input_districts.taz.xml,input_trips.trips.xml"/>
    </input>

    <output>
        <vehroute-output value="vehroutes.xml"/>
    </output>

    <time>
        <begin value="0"/>
    </time>

    <routing>
        <device.rerouting.probability value="1"/>
        <device.rerouting.adaptation-weight value="0.4"/>
        <device.rerouting.with-taz value="true"/>
    </routing>

    <report>
        <xml-validation value="never"/>
        <no-duration-log value="true"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
</routes>
